--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "finos-catalogue",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://brooklynrob.github.io/finos-catalogue",
   "dependencies": {
     "@glennsl/bs-json": "^3.0.0",
-    "react": "^16.8.1",
+    "gh-pages": "^2.0.1",
+    "react": "^16.8.3",
     "react-dom": "^16.8.1",
     "reason-scripts": "1.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
